kanc/src/tests/sample_code/should_fail/single_file/illegal_recursion/rec_fun_right_index_wrong_label.k
type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let foo = fun f(~-a: Nat, ~b: Nat): Nat {
    match a {
        o => Nat.o,
        s(a') => f(b: a', :a),
    }
};
